// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comma 1`] = `
".mixin() {
  box-shadow+: inset 0 0 10px #555;
}
.myclass {
  .mixin();
  box-shadow+: 0 0 20px black;
}
"
`;

exports[`space 1`] = `
".mixin() {
  transform+_: scale(2);
}
.myclass {
  .mixin();
  transform+_: rotate(15deg);
}
"
`;
